--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,6 @@ section#contact {
     height: 920px;
 }
 section#contact{
-    background-image: url('../images/contacts.jpg');
     padding: 30px 10px 60px;
 }
 section#contact h2 {
@@ -167,6 +166,7 @@ section#contact h2 {
     width: 95%;
     padding-left: 691px;
     padding-top: 100px;
+    background-image: url('../images/contacts.jpg');
 }
 input[type="text"]:focus-visible, textarea:focus-visible {
     outline: none;
@@ -286,7 +286,12 @@ span.copyright {
 .footersubmit-container {
     text-align: inherit;
 }
-/* Bootstrap */
+input[type="button"] {
+    background: deeppink;
+    border-radius: 26px;
+    color: white;
+}
+/* Bootstrap - gallery */
 .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
@@ -339,4 +344,7 @@ span.copyright {
   }
   main {
     background-color: #ffc0cb66;
-}
+ }
+ element.style {
+    width: 5%;
+ }
