--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,10 @@ section#contact {
 section#contact{
     padding: 30px 10px 60px;
 }
+section#contacts {
+    background: url(../images/contacts.jpg) no-repeat;
+    background-size: cover;
+}
 section#contact h2 {
         color: rgb(7, 7, 7);
         padding-top: 115px;
@@ -168,9 +172,7 @@ section#contact h2 {
     width: 47%;
     padding-left: 691px;
     padding-top: 100px;
-    background-image: url('../images/contacts.jpg') no-repeat;
     text-align: left;
-    background-color: #febec938;
     padding-bottom: 40px;
 }
 }
